kernel/tests/invalid_data_declarations/family_not_a_sort.ck
data SomeType : Type where

data Invalid : SomeType where